Update FIFO.java